Fix section titles on small mobile devices

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -57,7 +57,7 @@
       color: $white;
       font-size: 20px;
       font-weight: bold;
-      padding: 0 28px 8px;
+      padding: 0 8px 8px;
       text-transform: uppercase;
     }
 
